Fix z-index and modal error issue

--- a/src/renderer/components/ft-prompt/ft-prompt.css
+++ b/src/renderer/components/ft-prompt/ft-prompt.css
@@ -7,7 +7,7 @@
   background-color: rgb(0 0 0 / 70%);
 
   /* Higher than components like playlist info */
-  z-index: 200;
+  z-index: 201;
   padding: 15px;
   box-sizing: border-box;
   display: flex;
